# LangTest

./: .gitignore  README.md
cpp/: CMakeLists.txt  TODO.md  metalib.lang  stdlib.lang
cpp/src/: main.cpp
cpp/src/ast/: nodes.hpp
cpp/src/interpreter/: interpreter.cpp  interpreter.hpp
cpp/src/lexer/: lexer.cpp
cpp/src/parser/: parser.cpp
cpp/tests/: color.lang  test_all.lang  test_cmath.lang  test_cstd12.lang  test_cstdio16.lang  test_ffi.lang  test_metalib.lang  test_stdlib.lang
emscripted/: CMakeLists.txt  build.sh  index.html  setup.sh
emscripted/lib/: stdio.vo
emscripted/src/: web_main.cpp
interp/: TODO.md  alias.vo  for_loop.vo
interp/lib/: cstdio.vo  cstdlib.vo  ffi.vo  logic.vo  loops.vo  metalib.vo  stdio.vo  stdlib.vo
interp/src/ast/: nodes.hpp
interp/src/interpreter/: interpreter.cpp  interpreter.hpp
interp/src/lexer/: lexer.cpp  token.hpp
interp/src/parser/: parser.cpp  parser.hpp
interp/tests/: color.vo  test_all.vo  test_cmath.vo  test_cstdio.vo  test_cstdlib.vo  test_dynmember.vo  test_ffi.vo  test_float.vo  test_iter.vo  test_logic.vo  test_loop.vo  test_loops.vo  test_metalib.vo  test_proto.vo  test_stdlib.vo
